--- a/_config.yml
+++ b/_config.yml
@@ -50,21 +50,21 @@ nav:
     url: /index.html
     icon: icon-home
     class: home
+  - text: 分类
+    url: /categories.html
+    icon: icon-tags
+    class: none
   - text: 文章归档
     url: /archives.html
-    icon: icon-reorder
+    icon: icon-bookmark
     class: none
   - text: 关于我
     url: /contact.html
-    icon: icon-envelope-alt
-    class: none
-  - text: 联系我
-    url: http://www.zhanxin.info/contact.html
-    icon: icon-heart
+    icon: icon-user
     class: none
   - text: 博客源代码
-    url: https://github.com/pizn/iLotus
-    icon: icon-github
+    url: https://github.com/007sair
+    icon: icon-github-sign
     class: none
 
 page:
@@ -79,4 +79,4 @@ page:
     last: false
 
 author:
-  name: PIZn
+  name: Chan
