--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,8 @@ title: Chan's Blog
 subTitle: Just a blog.
 description: 这是 Chan 的博客，它是基于 Jekyll 搭建起来的。
 url: http://007sair.github.io
-feed: /atom.xml
+name: Chan's Blog
+feed: /feed.xml
 
 #菜单配置
 nav:
