--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,10 @@ future:       true
 unpublished:  false
 
 # Conversion
-markdown:     redcarpet
-highlighter:  pygments
+markdown:     kramdown
+kramdown:
+  input:         GFM  # 没有这个配置 代码块不会生效
+highlighter:  rouge
 lsi:          false
 excerpt_separator: "\n\n"
 
