--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ unpublished:  false
 markdown:     kramdown
 kramdown:
   input:         GFM  # 没有这个配置 代码块不会生效
+  syntax_highlighter: rouge
 highlighter:  rouge
 lsi:          false
 excerpt_separator: "\n\n"
