--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ paginate_path: "page:num"
 # Handling Reading
 safe:         false
 include:      [".htaccess"]
-exclude:      []
+exclude:      ["node_modules", "gulpfile.js", "package.json", "README.md"]
 keep_files:   [".git", ".svn"]
 encoding:     "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
