--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
   "author": "longchan",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.11.2",
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
-    "gulp-clean-css": "^2.0.4",
-    "gulp-concat": "^2.6.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-filter": "^4.0.0",
     "gulp-postcss": "^6.1.0",
-    "autoprefixer": "^6.3.6"
+    "autoprefixer": "^6.3.6",
+    "webpack": "^1.14.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "webpack-dev-server": "^1.16.2",
+    "node-sass": "^4.5.0"
   }
 }
